--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ Markdown==3.5.1
 openai==1.3.8
 python-dotenv==1.0.0
 PyPDF2==3.0.1
-pdfplumber==0.10.3 
+pdfplumber==0.10.3
+gunicorn==20.1.0
+whitenoise==6.5.0 
