--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ PyPDF2==3.0.1
 pdfplumber==0.10.3
 gunicorn==20.1.0
 whitenoise==6.5.0
-httpx==0.25.0 
+psycopg2-binary==2.9.7
+dj-database-url==2.1.0 
