--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 Django==4.2.7
 Markdown==3.5.1
-openai==1.40.0
+openai==1.35.0
 python-dotenv==1.0.0
 PyPDF2==3.0.1
 pdfplumber==0.10.3
 gunicorn==20.1.0
 whitenoise==6.5.0
 psycopg2-binary==2.9.7
-dj-database-url==2.1.0 
+dj-database-url==2.1.0
+httpx==0.25.0 
