--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ PyPDF2==3.0.1
 pdfplumber==0.10.3
 gunicorn==20.1.0
 whitenoise==6.5.0
-psycopg[binary]==3.1.19
+psycopg2==2.9.9
 dj-database-url==2.1.0
 httpx==0.25.0 
