--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,60 @@
-Django>=4.2,<5.1
-gunicorn>=21.2
-whitenoise>=6.6
-dj-database-url>=2.2
+# Core Framework
+Django==4.2.7
+
+# Production & Deployment
+gunicorn==21.2.0
+whitenoise==6.6.0
+
+# Database
+dj-database-url==2.2.0
 psycopg[binary]>=3.1,<3.4
-python-dotenv>=1.0
+
+# Environment & Config
+python-dotenv==1.0.0
+
+# AI & LLM
+openai==1.35.0
+httpx==0.25.0
+
+# PDF Processing
+PyPDF2==3.0.1
+pdfplumber==0.10.3
+
+# Text Processing
+Markdown==3.5.1
+
+# Security & Utils
+Pillow==10.1.0
+cryptography==41.0.7
+requests==2.31.0
+
+# Background Tasks (optional)
+celery==5.3.4
+redis==5.0.1
+
+# Development Tools
+django-extensions==3.2.3
+```
+
+## **🚀 Minimal Version (Render-Tested):**
+
+For immediate deployment success on Render:
+
+```python:requirements.txt
+<code_block_to_apply_changes_from>
+Django==4.2.7
+gunicorn==21.2.0
+whitenoise==6.6.0
+dj-database-url==2.2.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+openai==1.35.0
+httpx==0.25.0
+PyPDF2==3.0.1
+pdfplumber==0.10.3
+Markdown==3.5.1
+Pillow==10.1.0
+requests==2.31.0
+```
+
+## **💡
