--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ defusedxml==0.7.1
 distro==1.9.0
 dj-database-url==3.0.1
 Django==4.2.7
+django-storages==1.14.4
 et_xmlfile==2.0.0
 executing==2.2.0
 fastapi==0.116.1
